# discord_music_bot

./: .gitignore  pyproject.toml
src/: main.py
src/cogs/: music.py
